Added javadoc and merged conflicts with dev